# achtung

./: README.md  pyproject.toml
achtung/: main.py  settings.py
app/static/styles/: base.css
app/templates/: base.html
app/templates/pages/: heart.html  index.html
