[tool.poetry]
name = "achtung"
version = "0.0.0"
description = "Give me achtung!"
authors = ["Freddy Wordingham"]

[tool.poetry.dependencies]
fastapi = "^0.87.0"
jinja2 = "^3.1.2"
pydantic = { version = "1.10.2", extras = ["dotenv"] }
python = ">=3.8,<3.12"
requests = "^2.28.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
